# furtherance-mobile

./: Cargo.toml  Dioxus.toml  README.md  build.rs
assets/: main.css
assets/css/: alert.css  main.css  settings.css  sheet.css  shortcuts.css  timer.css  todo.css
assets/icon/: icon.icns
src/: constants.rs  localization.rs  main.rs  state.rs
src/database/: init.rs  persistence.rs  shortcuts.rs  sync.rs  tasks.rs  todos.rs
src/helpers/: actions.rs  color_utils.rs  database.rs  formatters.rs  icons.rs  tasks.rs  todos.rs  view_enums.rs
src/helpers/server/: encryption.rs  login.rs  logout.rs  sync.rs
src/helpers/views/: history.rs  settings.rs  shortcuts.rs  task_history.rs  task_input.rs  timer.rs  todos.rs
src/locales/en-US/: main.ftl
src/models/: fur_alert.rs  fur_persist.rs  fur_pomodoro.rs  fur_settings.rs  fur_sheet.rs  fur_shortcut.rs  fur_task.rs  fur_task_group.rs  fur_todo.rs  fur_user.rs
src/views/: settings_view.rs  shortcuts_view.rs  timer_view.rs  todos_view.rs
