[package]
name = "furtherance"
version = "0.1.0"
authors = ["Ricky Kresslein <ricky@unobserved.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
blake3 = "1.5"
chrono = { version = "0.4", features = ["alloc", "serde"] }
config = "0.14"
dioxus = { version = "0.6.3", features = [] }
dioxus-free-icons = { version = "0.9", features = ["bootstrap"] }
directories = "5.0"
fluent = "0.16"
itertools = "0.13"
once_cell = "1.21"
palette = "0.7.6"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = [
    "bundled",
    "chrono",
    "backup",
    "functions",
] }
rust-embed = "8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-locale = "0.3"
tokio = { version = "1.44", features = ["full"] }
toml = "0.8"
uuid = { version = "1.16", features = ["v4"] }

[features]
default = ["mobile"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
