[package]
name = "furtherance"
version = "0.1.0"
authors = ["Ricky Kresslein <ricky@unobserved.io>"]
edition = "2021"

[bundle]
identifier = "io.unobserved.furtherance"
publisher = "Unobserved"
icon = [
    "assets/icon/16x16.png",
    "assets/icon/16x16@2x.png",
    "assets/icon/32x32.png",
    "assets/icon/32x32@2x.png",
    "assets/icon/128x128.png",
    "assets/icon/128x128@2x.png",
    "assets/icon/256x256.png",
    "assets/icon/256x256@2x.png",
    "assets/icon/512x512.png",
    "assets/icon/512x512@2x.png",
]
copyright = "Copyright 2025 Unobserved"
category = "Productivity"
short_description = "Track your time without being tracked"

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
blake3 = "1.5"
chrono = { version = "0.4", features = ["alloc", "serde"] }
config = "0.14"
dioxus = { version = "0.6.3", features = [] }
directories = "5.0"
fluent = "0.16"
itertools = "0.13"
once_cell = "1.21"
palette = "0.7.6"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = [
    "bundled",
    "chrono",
    "backup",
    "functions",
] }
rust-embed = "8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-locale = "0.3"
sysinfo = "0.33"
tokio = { version = "1.44", features = ["full"] }
toml = "0.8"
uuid = { version = "1.16", features = ["v4"] }
wasm-bindgen-futures = "0.4.50"
webbrowser = "1.0"
web-sys = { version = "0.3.77", features = ["Window"] }

[features]
default = ["mobile"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
